fixed navbar collapse for small screens

--- a/src/scss/idai-components/_idai-navbar.scss
+++ b/src/scss/idai-components/_idai-navbar.scss
@@ -87,10 +87,6 @@
     padding-right: 15px;
   }
 
-  .navbar-collapse.collapse {
-
-    display: none !important;
-  }
 
   .navbar-nav {
 
